# python-project-50

./: README.md  makefile  pyproject.toml
.github/workflows/: test-lint.yml
gendiff/: parsing.py
gendiff/scripts/: __init__.py  formatter.py  gendiff.py  generate_diff.py  test.py
tests/: test_gendiff.py
