[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
repository = "https://github.com/Lusacan-Night/python-project-50"
authors = ["Sultan <lusacan.night@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" },
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.11,<4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
